--- a/src/views/details.hbs
+++ b/src/views/details.hbs
@@ -1,5 +1,5 @@
 <main>
-  <h1>Gan356 Air SM</h1>
+  <h1>{{ctx.name}}</h1>
   <img class="cube"
     src="{{ctx.imageUrl}}">
   <div class="details">
