--- a/src/views/details.hbs
+++ b/src/views/details.hbs
@@ -1,10 +1,28 @@
 <main>
-  <h1>{{ctx.name}}</h1>
-  <img class="cube"
-    src="{{ctx.imageUrl}}">
-  <div class="details">
-    <p><span>Description:</span>{{ctx.description}}</p>
-    <p><span>Difficulty level:</span> {{ctx.difficultyLevel}}</p>
-    <a class="btn" href="/">Back</a>
-  </div>
+    <h1>Rubiks Cube</h1>
+    <img class="cube" src="https://images-na.ssl-images-amazon.com/images/I/71WS9kb-JFL._SL1300_.jpg">
+    <div class="details">
+        <p><span>Description:</span>Some Description....</p>
+        <p><span>Difficulty level:</span> 6</p>
+        <a class="btn" href="#">Back</a>
+    </div>
+    <h2>Accessories</h2>
+    <div class="accessories">
+        <div class="accessory">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/61J8UP8pySL._SX425_.jpg" alt="stickerName">
+            <h3>Accessory Name</h3>
+            <p>Accessory Description</p>
+        </div>
+        <div class="accessory">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/61J8UP8pySL._SX425_.jpg" alt="stickerName">
+            <h3>Accessory Name</h3>
+            <p>Accessory Description</p>
+        </div>
+        <div class="accessory">
+            <img src="https://images-na.ssl-images-amazon.com/images/I/61J8UP8pySL._SX425_.jpg" alt="stickerName">
+            <h3>Accessory Name</h3>
+            <p>Accessory Description</p>
+        </div>
+        <h3 class="italic">This cube has no accessories yet...</h3>
+    </div>
 </main>
