--- a/src/views/details.hbs
+++ b/src/views/details.hbs
@@ -1,10 +1,10 @@
 <main>
-    <h1>Rubiks Cube</h1>
-    <img class="cube" src="https://images-na.ssl-images-amazon.com/images/I/71WS9kb-JFL._SL1300_.jpg">
+    <h1>{{ctx.name}}</h1>
+    <img class="cube" src="{{ctx.imageUrl}}">
     <div class="details">
-        <p><span>Description:</span>Some Description....</p>
-        <p><span>Difficulty level:</span> 6</p>
-        <a class="btn" href="#">Back</a>
+        <p><span>Description:</span>{{ctx.description}}</p>
+        <p><span>Difficulty level:</span>{{ctx.difficultyLevel}}</p>
+        <a class="btn" href="/">Back</a>
     </div>
     <h2>Accessories</h2>
     <div class="accessories">
