rename obj pass to details view

--- a/src/views/details.hbs
+++ b/src/views/details.hbs
@@ -1,9 +1,9 @@
 <main>
-    <h1>{{ctx.name}}</h1>
-    <img class="cube" src="{{ctx.imageUrl}}">
+    <h1>{{cube.name}}</h1>
+    <img class="cube" src="{{cube.imageUrl}}">
     <div class="details">
-        <p><span>Description:</span>{{ctx.description}}</p>
-        <p><span>Difficulty level:</span>{{ctx.difficultyLevel}}</p>
+        <p><span>Description:</span>{{cube.description}}</p>
+        <p><span>Difficulty level:</span>{{cube.difficultyLevel}}</p>
         <a class="btn" href="/">Back</a>
     </div>
     <h2>Accessories</h2>
