--- a/src/views/404.hbs
+++ b/src/views/404.hbs
@@ -2,6 +2,9 @@
     <img id="sadFaceImg"
         src="/images/sadFace.jpg"
         alt="sad face" />
-    <h1>404</h1>
+    {{#if error}}
+    <h2>{{error}}</h2>
+    {{else}}
     <h2>Page not found</h2>
+    {{/if}}
 </main>
