--- a/src/views/create.hbs
+++ b/src/views/create.hbs
@@ -2,6 +2,9 @@
   <h1>Create</h1>
   <div class="form">
     <form action="/cube/create" method="POST">
+      {{#if error}}
+      {{> errorMessage error}}
+      {{/if}}
       <label for="name">Name</label>
       <input type="text" id="name" name="name">
       <label for="name">Description</label>
