--- a/src/views/createAccessory.hbs
+++ b/src/views/createAccessory.hbs
@@ -2,6 +2,9 @@
     <h1>Create Accessory</h1>
     <div class="form">
         <form action="/accessory/create" method="POST">
+            {{#if error}}
+            {{> errorMessage error}}
+            {{/if}}
             <label for="name">Name</label>
             <input type="text" id="name" name="name">
             <label for="name">Description</label>
