--- a/src/views/partials/errorMessage.hbs
+++ b/src/views/partials/errorMessage.hbs
@@ -1,3 +1,3 @@
 <div class="error">
-    <div class="error-message">{{this.message}}</div>
+    <div class="error-message">Error: {{this.message}}</div>
 </div>
